--- a/PaginaWeb/css/infoJuego.css
+++ b/PaginaWeb/css/infoJuego.css
@@ -86,6 +86,16 @@ main {
     border-radius: 10px;
 }
 
+.imagen-producto{
+    height: 200px;
+}
+
+.video{
+    width:500px;
+    height:500px;
+    
+}
+
 .informacion-producto {
     display: flex;
     flex-direction: column;
@@ -100,7 +110,14 @@ main {
 .descripcion {
     text-align: center;
     margin-left: 40%;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
+    margin-top: -25%;
+}
+
+.descripcion p{
+
+margin-top: -14%;
+
 }
 
 .botones {
@@ -108,7 +125,7 @@ main {
     gap: 10px;
     align-items: center;
     margin-left: 55%;
-    margin-bottom: 40%;
+    margin-bottom: 20%;
 }
 
 .añadir-carrito, .comprar-ahora {
