--- a/PaginaWeb/css/web.css
+++ b/PaginaWeb/css/web.css
@@ -84,6 +84,29 @@ header nav ul li a.cart img {
     width: 550px;
 }
 
+.floating-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.floating-button:hover {
+    background-color: #0056b3;
+    }
+
 
 .portada h1 {
     font-size: 48px;
