--- a/PaginaWeb/css/web.css
+++ b/PaginaWeb/css/web.css
@@ -154,6 +154,14 @@ header nav ul li a.cart img {
 .imagenJuego {
     width: 700px;
     height: 500px;
+    transition: opacity 2s,
+    width 1s,
+    height 1s;
+}
+
+.imagenJuego:hover{
+    width: 800px;
+    height: 600px;
 }
 
 .slider {
