--- a/PaginaWeb/css/compras.css
+++ b/PaginaWeb/css/compras.css
@@ -97,6 +97,14 @@ main h1 {
     width: 100%;
     border-radius: 10px;
     margin-bottom: 10px;
+    transition: opacity 2s,
+    width 1s,
+    height 1s;
+}
+
+.juego img:hover{
+width: 400px;
+height: 300px;
 }
 
 .nombrePrecio{
