--- a/PaginaWeb/css/carrito.css
+++ b/PaginaWeb/css/carrito.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Press Start 2P', cursive;
     background-color: #f0f0f0;
     color: #333;
 }
