--- a/PaginaWeb/css/formularioInicioDeSesion.css
+++ b/PaginaWeb/css/formularioInicioDeSesion.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Press Start 2P', cursive;
     color: #333;
     background-color: #fff;
 }
