--- a/PaginaWeb/css/infoJuego.css
+++ b/PaginaWeb/css/infoJuego.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Press Start 2P', cursive;
     color: #333;
     background-color: #f4f4f4;
 }
@@ -81,8 +81,8 @@ main {
 }
 
 .imagen-producto img {
-    width: 300px;
-    height: 180px;
+    width: 350px;
+    height: 200px;
     border-radius: 10px;
 }
 
