--- a/PaginaWeb/css/web.css
+++ b/PaginaWeb/css/web.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Press Start 2P', cursive;
+    /* font-family: Arial, sans-serif; */
     color: #333;
     background-color: #f4f4f4;
 }
@@ -128,6 +129,15 @@ header nav ul li a.cart img {
     justify-content: space-between;
     padding: 40px;
     background-color: #fff;
+    margin-bottom: 20px;
+}
+
+.noticiasJuegosMedio{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px;
+    background-color: #e3e3e3;
     margin-bottom: 20px;
 }
 
