--- a/PaginaWebBootstrap/css/formularioRegistroBootstrap.css
+++ b/PaginaWebBootstrap/css/formularioRegistroBootstrap.css
@@ -65,9 +65,18 @@ header nav ul li a.cart img {
     color:darkgray;
 }
 
-section{
-    background-image: url('../FotosPaginaWeb/fotoWeb.jpg');
-}
+
+
+.gradient-custom-3 {
+    /* fallback for old browsers */
+    background: #84fab0;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5))
+    }
 
     .gradient-custom-4 {
     /* fallback for old browsers */
